# learn-web-gpu

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dependencies.cmake  DevDependencies.cmake  LICENSE  README.md  _typos.toml  dprint.json  justfile  package-lock.cmake  renovate.json  requirements.txt  utils.cmake
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  documentation.yml  macos.yml  pre-commit.yml  scorecard.yml  ubuntu.yml  windows.yml
Catch_tests/: CMakeLists.txt  main.cpp  test.cpp
resources/: shader.wgsl  webgpu.txt
src/: CMakeLists.txt  debug_assert.h  main.cpp  webgpu-utils.cpp  webgpu-utils.h
src/utilities/: resource_manager.h
